--- a/index.html
+++ b/index.html
@@ -153,6 +153,83 @@
       </div>
       <!-- service area -->
 
+      <!-- portfolio area -->
+      <div class="wrapper port_bg">
+        <div class="port_cont">
+          <div class="port_head">
+            <h2>our portfolio</h2>
+          </div>
+          <div class="port_gallery">
+            <div class="port_im1 mr-40 for_overlay">
+              <div class="overlay_img">
+                <div class="over_l">
+                  <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+              </div>
+              <img src="./Images/i1.png" alt="1" />
+            </div>
+            <div class="port_im2 mr-40 for_overlay">
+              <div class="overlay_img">
+                <div class="over_l">
+                 <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+              </div>
+              <img src="./Images/i2.png" alt="2" />
+            </div>
+            <div class="port_im3 mr-40 for_overlay">
+              <div class="overlay_img">
+                <div class="over_l">
+                <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+              </div>
+              <img src="./Images/i3.png" alt="3" />
+            </div>
+            <div class="port_im4 mr-40 for_overlay">
+              <div class="overlay_img">
+                <div class="over_l">
+                 <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+              </div>
+              <img src="./Images/i4.png" alt="4" />
+            </div>
+            <div class="port_im5 mr-40 for_overlay">
+              <div class="overlay_img">
+                <div class="over_l">
+                 <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+              </div>
+              <img src="./Images/i8.png" alt="5" />
+            </div>
+            <div class="port_im6 mr-40 for_overlay">
+              <div class="overlay_img">
+                <div class="over_l">
+               <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+              </div>
+              <img src="./Images/i6.png" alt="6" />
+            </div>
+            <div class="port_im7 mr-40 for_overlay">
+              <div class="overlay_img">
+                <div class="over_l">
+                  <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+              </div>
+              <img src="./Images/i7.png" alt="7" />
+            </div>
+            <div class="port_im8 mr-40 for_overlay">
+              <div class="overlay_img">
+                <div class="over_l">
+                  <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+              </div>
+              <img src="./Images/i9.png" alt="8" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- portfolio area -->
+       <!-- teams area starts -->
+       <!-- teams area ends -->
     </section>
   </body>
 </html>
