--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="port_im2 mr-40 for_overlay">
               <div class="overlay_img">
                 <div class="over_l">
-                 <a href="#"><i class="fa-solid fa-link"></i></a>
+                  <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
               </div>
               <img src="./Images/i2.png" alt="2" />
@@ -179,7 +179,7 @@
             <div class="port_im3 mr-40 for_overlay">
               <div class="overlay_img">
                 <div class="over_l">
-                <a href="#"><i class="fa-solid fa-link"></i></a>
+                  <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
               </div>
               <img src="./Images/i3.png" alt="3" />
@@ -187,7 +187,7 @@
             <div class="port_im4 mr-40 for_overlay">
               <div class="overlay_img">
                 <div class="over_l">
-                 <a href="#"><i class="fa-solid fa-link"></i></a>
+                  <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
               </div>
               <img src="./Images/i4.png" alt="4" />
@@ -195,7 +195,7 @@
             <div class="port_im5 mr-40 for_overlay">
               <div class="overlay_img">
                 <div class="over_l">
-                 <a href="#"><i class="fa-solid fa-link"></i></a>
+                  <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
               </div>
               <img src="./Images/i8.png" alt="5" />
@@ -203,7 +203,7 @@
             <div class="port_im6 mr-40 for_overlay">
               <div class="overlay_img">
                 <div class="over_l">
-               <a href="#"><i class="fa-solid fa-link"></i></a>
+                  <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
               </div>
               <img src="./Images/i6.png" alt="6" />
@@ -228,8 +228,83 @@
         </div>
       </div>
       <!-- portfolio area -->
-       <!-- teams area starts -->
-       <!-- teams area ends -->
+      <!-- teams area starts -->
+      <section>
+        <div class="wrapper team_bg">
+          <div class="team_container">
+            <div class="team_head">
+              <h2>our team</h2>
+            </div>
+            <div class="team_content">
+              <div class="team_card">
+                <div class="team_img">
+                  <img src="./Images/hero.png" alt="sajal" />
+                  <div class="overlay_team">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  </div>
+                </div>
+                <span>
+                  <h3>sajal sarkar</h3>
+                  <h4>web developer</h4>
+                </span>
+              </div>
+
+              <div class="team_card">
+                <div class="team_img">
+                  <img src="./Images/hero.png" alt="sajal" />
+                  <div class="overlay_team">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  </div>
+                </div>
+                <span>
+                  <h3>sajal sarkar</h3>
+                  <h4>web developer</h4>
+                </span>
+              </div>
+              <div class="team_card">
+                <div class="team_img">
+                  <img src="./Images/hero.png" alt="sajal" />
+                  <div class="overlay_team">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  </div>
+                </div>
+                <span>
+                  <h3>sajal sarkar</h3>
+                  <h4>web developer</h4>
+                </span>
+              </div>
+              <div class="team_card">
+                <div class="team_img">
+                  <img src="./Images/hero.png" alt="sajal" />
+                  <div class="overlay_team">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  </div>
+                </div>
+                <span>
+                  <h3>sajal sarkar</h3>
+                  <h4>web developer</h4>
+                </span>
+              </div>
+
+
+
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- teams area ends -->
     </section>
   </body>
 </html>
