--- a/index.html
+++ b/index.html
@@ -297,14 +297,82 @@
                   <h4>web developer</h4>
                 </span>
               </div>
-
-
-
             </div>
           </div>
         </div>
       </section>
       <!-- teams area ends -->
+      <!-- testimonials -->
+      <section>
+        <div class="wrapper testi_bg">
+          <div class="testi_content">
+            <div class="testi_header">
+              <h2>Testimonial</h2>
+            </div>
+            <div class="testi_a">
+              <div class="testi_details">
+                <div class="testi_img">
+                  <img src="./Images/testi1.png" alt="testi1" />
+                </div>
+                <div class="testi_para">
+                  <span class="box"></span>
+                  <h4>sahin alom</h4>
+                  <span>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                  </span>
+                  <h3>chairman</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incidunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  </p>
+                </div>
+              </div>
+              <div class="testi_details">
+                <div class="testi_img">
+                  <img src="./Images/testi1.png" alt="testi1" />
+                </div>
+                <div class="testi_para">
+                  <span class="box"></span>
+                  <h4>sahin alom</h4>
+                  <span>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                  </span>
+                  <h3>chairman</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incidunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- testimonials -->
+       <!-- contact area -->
+        <section>
+          <div class="wrapper contact_area">
+            <div class="contact_container">
+              <div class="container_details"></div>
+            </div>
+          </div>
+        </section>
+       <!-- contact area -->
+        <footer>
+
+        </footer>
     </section>
   </body>
 </html>
